@@ -32,29 +32,30 @@ public class RequestMappingHandlerAdapter implements HandlerAdapter {
     }
 
     @Override
-    public void handle(HttpServletRequest request, HttpServletResponse response, Object handler) throws Exception {
-        handleInternal(request, response, (HandlerMethod) handler);
+    public ModelAndView handle(HttpServletRequest request, HttpServletResponse response, Object handler) throws Exception {
+        return handleInternal(request, response, (HandlerMethod) handler);
     }
 
-    private void handleInternal(HttpServletRequest request, HttpServletResponse response, HandlerMethod handler) {
+    private ModelAndView handleInternal(HttpServletRequest request, HttpServletResponse response, HandlerMethod handler) {
         Method method = handler.getMethod();
         Object obj = handler.getBean();
         Object objResult = null;
         try {
-            invokeHandlerMethod(request, response, handler);
+            return invokeHandlerMethod(request, response, handler);
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
     }
 
-    protected void invokeHandlerMethod(HttpServletRequest request, HttpServletResponse response,
+    protected ModelAndView invokeHandlerMethod(HttpServletRequest request, HttpServletResponse response,
                                        HandlerMethod handlerMethod) throws Exception {
+        ModelAndView mav = null;
         WebDataBinderFactory binderFactory = new WebDataBinderFactory();
         Parameter[] methodParameters = handlerMethod.getMethod().getParameters();
         Object[] methodParamObjs = new Object[methodParameters.length];
         int i = 0;
         for (Parameter methodParameter : methodParameters) {
-            Object methodParamObj = methodParameter.getType().newInstance();
+            Object methodParamObj = methodParameter.getType().getDeclaredConstructor().newInstance();
             WebDataBinder webDataBinder = binderFactory.createBinder(request, methodParamObj, methodParameter.getName());
             webBindingInitializer.initBinder(webDataBinder);
             webDataBinder.bind(request);
@@ -63,10 +64,20 @@ public class RequestMappingHandlerAdapter implements HandlerAdapter {
         }
         Method invocableMethod = handlerMethod.getMethod();
         Object returnObj = invocableMethod.invoke(handlerMethod.getBean(), methodParamObjs);
+        //如果是ResponseBody注解，仅仅返回值，则转换数据格式后直接写到response
         if (invocableMethod.isAnnotationPresent(ResponseBody.class)) { //ResponseBody
             this.messageConverter.write(returnObj, response);
+        }else {
+            //返回的是前端页面
+            if (returnObj instanceof ModelAndView) {
+                mav = (ModelAndView) returnObj;
+            } else if (returnObj instanceof String sTarget) {
+                //字符串也认为是前端页面
+                mav = new ModelAndView();
+                mav.setViewName(sTarget);
+            }
         }
-        response.getWriter().append(returnObj.toString());
+        return mav;
 
     }
 
